<resources>
    <string name="app_name">Password Manager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="profile_title">Profile</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="category">Category</string>
    <string name="email">Email</string>
    <string name="account_name">Name</string>
    <string name="search_bar">Search Bar</string>
    <string name="apps">Apps</string>
    <string name="key">Key</string>
    <string name="account_key">account key</string>
    <string name="account_name_register">account name</string>
    <string name="email_address">email address</string>
    <string name="account_key_register">account key</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_key">Key</string>
    <string name="new_account">create new account?\nplease swipe right to register.</string>
    <string name="error_same_password">Cannot have the same password with older accounts</string>
    <string name="error_invalid_input">No field should be empty!</string>
    <string name="add_label_app">Application Name</string>
    <string name="add_label_email">Email Address</string>
    <string name="add_label_password">Password</string>
    <string name="application_name">example: Facebook</string>
    <string name="add_ed_password">minimal 8 characters</string>
    <string name="add_ed_email">email (optional)</string>
    <string name="create_new_credential">create new credential</string>
    <string name="detail_label_app">application name</string>
    <string name="detail_label_date">last edit</string>
    <string name="detail_label_psw">password</string>
    <string name="detail_credential">Detail Credential</string>
    <string name="confirm">confirm</string>
    <string name="random_password_generator">Random Password Generator</string>
    <string name="include_uppercase_letter">Include Uppercase Letter</string>
    <string name="include_numbers">Include Numbers</string>
    <string name="include_special_character">Include Special Character</string>
    <string name="generate_password">Generate Password</string>
    <string name="delete_credential">Delete Credential</string>
</resources>